--- a/AboutUs.html
+++ b/AboutUs.html
@@ -14,26 +14,65 @@
   <button><a href="login.html">Log in</a></button>
   <button><a href="Signup.html">Register</a></button>
   <button><a href="index.html">Homepage</a></button>
-
 </header>
 <hr/>
 
-<!-- Body -->
-<section>
-  <h2 style="text-align:center;">About Us</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify; font-size:1.1em;">
-    Welcome to Udemy – your platform to learn anything, anywhere, anytime! <br><br>
-    We believe education has the power to transform lives. That’s why we offer a range of carefully curated free online courses designed especially for Computer Science students and tech enthusiasts. 
-    Whether you want to build your first website, dive into programming languages, master data structures, or explore cloud technologies, our goal is to help you unlock your potential and stay ahead in this fast-changing digital world.
-    <br><br>
-    Our mission is simple: make high-quality, industry-relevant education accessible to everyone.
-    Join thousands of learners on Udemy and start your journey today!
-  </p>
-</section>
+<!-- Main content -->
+<main>
+  <section>
+    <h2 style="text-align:center;">About Us</h2>
+    <p style="max-width:800px; margin:auto; text-align:justify; font-size:1.1em;">
+      Welcome to Udemy – your online destination to learn anything, anytime, from anywhere!
+      <br><br>
+      We’re passionate about making high-quality, industry-relevant education accessible to everyone. Whether you're a beginner starting your coding journey, a student brushing up on skills for an exam, or a professional exploring new technologies, our platform is built for you.
+    </p>
+  </section>
+
+  <section>
+    <h3 style="text-align:center;">Our Mission</h3>
+    <p style="max-width:800px; margin:auto; text-align:justify;">
+      To empower learners worldwide by providing free, carefully curated computer science courses covering programming, AI, data, cloud, and more. We believe knowledge should be open and available to help everyone thrive in the digital world.
+    </p>
+  </section>
+
+  <section>
+    <h3 style="text-align:center;">What We Offer</h3>
+    <ul style="max-width:800px; margin:auto;">
+      <li>Free and beginner-friendly courses in HTML, CSS, JavaScript, Python, Java, and more</li>
+      <li>Advanced topics like Machine Learning, Data Science, and Cloud technologies</li>
+      <li>Practical problem-solving to boost your coding logic and interview readiness</li>
+      <li>Content designed for students, self-learners, and professionals alike</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3 style="text-align:center;">Why Choose Us?</h3>
+    <ul style="max-width:800px; margin:auto;">
+      <li>Learn at your own pace, anytime and anywhere</li>
+      <li>Content focused on real-world skills and industry trends</li>
+      <li>No hidden costs – everything we list is completely free</li>
+      <li>Curated by learners, for learners</li>
+    </ul>
+  </section>
+
+  <section>
+    <h3 style="text-align:center;">Meet the Community</h3>
+    <p style="max-width:800px; margin:auto; text-align:justify;">
+      Thousands of learners like you are already exploring new skills, building projects, and sharing knowledge through our platform. Join our growing community and see how far you can go!
+    </p>
+  </section>
+
+  <section>
+    <h3 style="text-align:center;">Start Learning Today</h3>
+    <p style="max-width:800px; margin:auto; text-align:center;">
+      <a href="Signup.html">Sign up</a> and start your journey to becoming a better developer and thinker.  
+      Already have an account? <a href="login.html">Log in</a> to continue learning!
+    </p>
+  </section>
+</main>
 
 <!-- Footer -->
 <hr/>
-
 <section>
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
@@ -89,7 +128,6 @@
   </div>
 </footer>
 </section>
-
 
 </body>
 </html>
