--- a/DSA.html
+++ b/DSA.html
@@ -15,9 +15,48 @@
 </header>
 <hr/>
 <section>
-<h2>Data Structures & Algorithms</h2>
-<p>Enhance your problem-solving skills by learning essential data structures and algorithms used in software development.</p>
+  <h2 style="text-align:center;">Data Structures & Algorithms (DSA)</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    DSA is the foundation of efficient programming. Understanding how to store, organize, and process data helps you write optimized, scalable code — essential for coding interviews and real-world applications.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Arrays, linked lists, stacks, and queues</li>
+    <li>Trees, graphs, and hash tables</li>
+    <li>Sorting and searching algorithms</li>
+    <li>Time and space complexity (Big O notation)</li>
+    <li>Practice problems to build logic</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn DSA?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Must-have for technical interviews</li>
+    <li>Helps write faster, more efficient code</li>
+    <li>Builds analytical and problem-solving skills</li>
+    <li>Foundation for advanced topics in computer science</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Optimizing search engines, building social networks, designing databases, and improving app performance.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> to master DSA from scratch!
+    Already have an account? <a href="login.html">Log in</a> and practice problems.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
