--- a/DataScience.html
+++ b/DataScience.html
@@ -15,9 +15,48 @@
 </header>
 <hr/>
 <section>
-<h2>Data Science</h2>
-<p>Learn to extract meaningful insights from data using statistics, programming, and visualization techniques.</p>
+  <h2 style="text-align:center;">Data Science</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Data science combines programming, math, and business knowledge to extract insights from data — helping organizations make smarter decisions.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Data collection and cleaning</li>
+    <li>Exploratory data analysis (EDA)</li>
+    <li>Basic statistics and data visualization</li>
+    <li>Using tools like Python, pandas, and matplotlib</li>
+    <li>Presenting results in reports or dashboards</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn Data Science?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>High-paying, in-demand field</li>
+    <li>Helps make data-driven decisions</li>
+    <li>Applicable in marketing, healthcare, finance, and more</li>
+    <li>Combines creativity and analytical thinking</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Sales forecasting, market analysis, user behavior prediction, and building dashboards.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> and start exploring data!
+    Already have an account? <a href="login.html">Log in</a>.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
