--- a/DockerContainers.html
+++ b/DockerContainers.html
@@ -15,9 +15,48 @@
 </header>
 <hr/>
 <section>
-<h2>Docker & Containers</h2>
-<p>Learn how to package applications into containers using Docker for easy deployment and scalability.</p>
+  <h2 style="text-align:center;">Docker & Containers</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Docker lets you package your applications and dependencies into lightweight containers, ensuring they run the same everywhere.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>What containers are and why they matter</li>
+    <li>Installing Docker and running containers</li>
+    <li>Building custom images with Dockerfiles</li>
+    <li>Managing containers and volumes</li>
+    <li>Basic orchestration concepts</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn Docker?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Widely used in DevOps and cloud deployments</li>
+    <li>Makes development and testing faster</li>
+    <li>Ensures consistency across environments</li>
+    <li>Works with microservices architecture</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Deploying apps, running development environments, testing software, and scaling microservices.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> and launch your first container!
+    Already learning? <a href="login.html">Log in</a>.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
