--- a/HTMLandCSS.html
+++ b/HTMLandCSS.html
@@ -15,9 +15,50 @@
 </header>
 <hr/>
 <section>
-  <h2>HTML & CSS</h2>
-  <p>Learn how to build beautiful and responsive websites using HTML and CSS, the core technologies of web development.</p>
+  <h2 style="text-align:center;">HTML & CSS</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    HTML (HyperText Markup Language) and CSS (Cascading Style Sheets) are the core building blocks of the web.
+    Together, they let you structure web pages and style them to look modern, responsive, and visually appealing.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Basic HTML tags, elements, and attributes</li>
+    <li>Structuring pages with headings, paragraphs, lists, images, and links</li>
+    <li>CSS selectors, properties, and styling text and layouts</li>
+    <li>Responsive design for mobile and desktop</li>
+    <li>Practical projects like building your own portfolio website</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn HTML & CSS?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Essential skills for web development and design</li>
+    <li>Easy to learn and a perfect starting point for beginners</li>
+    <li>Enables you to create your own websites and share your work online</li>
+    <li>Foundation for learning JavaScript and other advanced topics</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Build landing pages, blogs, portfolios, small business websites, and email templates.
+    HTML and CSS are used everywhere from personal sites to enterprise-grade web applications.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> and start building your first web page today!
+    Already have an account? <a href="login.html">Log in</a> to continue.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
