--- a/ML.html
+++ b/ML.html
@@ -15,9 +15,49 @@
 </header>
 <hr/>
 <section>
-<h2>Machine Learning</h2>
-<p>Explore algorithms that enable computers to learn from data and make predictions without being explicitly programmed.</p>
+  <h2 style="text-align:center;">Machine Learning (ML)</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Machine learning lets computers learn from data to make predictions and decisions without being explicitly programmed.
+    It powers recommendations, voice assistants, and self-driving cars.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>What is ML and its types (supervised, unsupervised, reinforcement)</li>
+    <li>Basic algorithms: linear regression, k-means, decision trees</li>
+    <li>Data preprocessing and feature engineering</li>
+    <li>Introduction to tools like scikit-learn</li>
+    <li>Building and evaluating simple models</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn ML?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Fast-growing field with huge career opportunities</li>
+    <li>Used in nearly every industry from healthcare to finance</li>
+    <li>Helps turn raw data into actionable insights</li>
+    <li>Builds strong analytical thinking</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Spam filters, recommendation systems, fraud detection, language translation, and predictive analytics.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> and explore ML step by step!
+    Already learning? <a href="login.html">Log in</a> to continue.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
