--- a/ProblemSolving.html
+++ b/ProblemSolving.html
@@ -15,9 +15,49 @@
 </header>
 <hr/>
 <section>
-<h2>Problem Solving</h2>
-<p>Develop critical thinking and algorithmic skills to tackle coding problems effectively and efficiently.</p>
+  <h2 style="text-align:center;">Git & GitHub</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Git is a version control system to track changes in your code, while GitHub is an online platform to host and collaborate on projects.
+    Together, they make teamwork and code sharing seamless.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Initializing repositories and tracking changes</li>
+    <li>Committing, branching, and merging code</li>
+    <li>Using GitHub to host projects</li>
+    <li>Pull requests and code reviews</li>
+    <li>Best practices for collaboration</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn Git?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Essential for almost every programming or data role</li>
+    <li>Protects you from losing your work</li>
+    <li>Makes collaboration simple and professional</li>
+    <li>Supports open source contributions</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Managing code for apps, websites, data projects, and even documentation.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> and create your first repository!
+    Already learning? <a href="login.html">Log in</a>.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
