--- a/Python.html
+++ b/Python.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-<!-- Header -->
+
 <header>
   <span><b>Udemy</b></span>
   <input type="text" placeholder="Search About Courses">
@@ -17,56 +17,50 @@
 </header>
 <hr/>
 
-<!-- Body -->
 <section>
   <h2 style="text-align:center;">Python Programming</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify; font-size:1.1em;">
-    Dive into the world of Python, one of the most popular and beginner-friendly programming languages!
-    <br><br>
-    In this course, you'll learn Python fundamentals, data types, control structures, functions, and modules.
-    You'll also explore real-world applications like data analysis, web development, and automation.
-    <br><br>
-    By the end of this course, you'll be able to write your own Python scripts and develop small projects confidently.
-    Start your journey into programming with Python today!
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Python is a beginner-friendly programming language known for its simplicity and versatility.
+    From web apps to AI and data science, Python is everywhere.
   </p>
 </section>
 
-<!-- Footer -->
-<hr/>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Python Programming - Udemy</title>
-</head>
-<body>
-
-<!-- Header -->
-<header>
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
-  <button><a href="index.html">Homepage</a></button>
-</header>
-<hr/>
-
-<!-- Body -->
 <section>
-  <h2 style="text-align:center;">Python Programming</h2>
-  <p style="max-width:800px; margin:auto; text-align:justify; font-size:1.1em;">
-    Dive into the world of Python, one of the most popular and beginner-friendly programming languages!
-    <br><br>
-    In this course, you'll learn Python fundamentals, data types, control structures, functions, and modules.
-    You'll also explore real-world applications like data analysis, web development, and automation.
-    <br><br>
-    By the end of this course, you'll be able to write your own Python scripts and develop small projects confidently.
-    Start your journey into programming with Python today!
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Basic syntax, variables, loops, and conditionals</li>
+    <li>Functions and modules</li>
+    <li>Working with data types and files</li>
+    <li>Introduction to libraries like NumPy and pandas</li>
+    <li>Small projects to apply your skills</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn Python?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Easy to learn and read, perfect for beginners</li>
+    <li>Widely used in data science, AI, and web development</li>
+    <li>Large supportive community and countless resources</li>
+    <li>Great for rapid prototyping and automation</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Web apps, data analysis, machine learning, automation scripts, chatbots, and more.
   </p>
 </section>
 
-<!-- Footer -->
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> and begin your Python journey today!
+    Already have an account? <a href="login.html">Log in</a> to practice.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
