--- a/SQLDatabases.html
+++ b/SQLDatabases.html
@@ -15,9 +15,46 @@
 </header>
 <hr/>
 <section>
-<h2>SQL & Databases</h2>
-<p>Understand how to store, retrieve, and manage data efficiently using SQL and relational databases.</p>
+  <h2 style="text-align:center;">SQL & Databases</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Databases store, manage, and retrieve data. SQL (Structured Query Language) helps you interact with databases to add, update, and analyze data.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Basics of databases and relational models</li>
+    <li>Writing SQL queries to select, insert, update, and delete data</li>
+    <li>Filtering, sorting, and joining tables</li>
+    <li>Using aggregate functions like COUNT and SUM</li>
+    <li>Simple projects to practice querying</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn SQL?</h3>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Essential skill in nearly every tech and data job</li>
+    <li>Makes data analysis and reporting easier</li>
+    <li>Works with MySQL, PostgreSQL, Oracle, and more</li>
+    <li>Combines well with programming languages</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Customer databases, sales analysis, reporting dashboards, and backend applications.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p style="max-width:800px; margin:auto; text-align:center;">
+    <a href="Signup.html">Sign up</a> to learn SQL basics!
+    Already learning? <a href="login.html">Log in</
+
 <hr/>
 <section>
 <footer>
