--- a/Terms.html
+++ b/Terms.html
@@ -3,23 +3,39 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cybersecurity Basics - Udemy</title>
+<title>Terms of Use - Udemy</title>
 </head>
 <body>
+
+<!-- Header -->
 <header>
-<span><b>Udemy</b></span>
-<input type="text" placeholder="Search About Courses">
-<button><a href="login.html">Log in</a></button>
-<button><a href="Signup.html">Register</a></button>
-<button><a href="index.html">Homepage</a></button>
+  <span><b>Udemy</b></span>
+  <input type="text" placeholder="Search About Courses">
+  <button><a href="login.html">Log in</a></button>
+  <button><a href="Signup.html">Register</a></button>
+  <button><a href="index.html">Homepage</a></button>
 </header>
 <hr/>
+
+<!-- Main Content -->
 <section>
-<h2>Cybersecurity Basics</h2>
-<p>Understand the principles of cybersecurity, common threats, and how to protect systems and data from attacks.</p>
+  <h2 style="text-align:center;">Terms of Use</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    By accessing and using our website and courses, you agree to follow these terms:
+  </p>
+  <ul style="max-width:800px; margin:auto;">
+    <li>Use the content for personal learning only; redistribution or resale is prohibited.</li>
+    <li>Respect copyrights and intellectual property rights of all creators.</li>
+    <li>Do not misuse our platform or engage in any harmful or illegal activities.</li>
+    <li>We may update these terms; continued use indicates acceptance of the new terms.</li>
+  </ul>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Please check this page regularly to stay informed about our terms.
+  </p>
 </section>
 <hr/>
-<section>
+
+<!-- Footer -->
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -65,6 +81,8 @@
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ContactUs.html">Contact Us</a></li>
+      <li><a href="Terms.html">Terms of Use</a></li>
+      <li><a href="Privacy.html">Privacy Policy</a></li>
     </ul>
   </div>
 
@@ -73,6 +91,6 @@
     <span>English</span>
   </div>
 </footer>
-</section>
+
 </body>
 </html>
