--- a/courses.html
+++ b/courses.html
@@ -5,8 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Top Free CS Courses - Udemy Clone</title>
   <meta name="description" content="Discover top free online courses for computer science students: HTML, CSS, Python, Java, AI, cloud, and more!">
-  <link rel="stylesheet" href="i.CSS">
   <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="stylesheet" href="i.CSS">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
@@ -62,21 +62,21 @@
         <div>Java Programming<br><small>Build apps & enterprise solutions.</small></div>
       </td>
       <td align="center">
-        <a href="DSA.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" width="120" alt="DSA"></a>
+        <a href="DSA.html"><img src="D.jpg" width="120" alt="DSA"></a>
         <div>Data Structures & Algorithms<br><small>Essential for coding interviews & logic building.</small></div>
       </td>
       <td align="center">
-        <a href="ML.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/44/Machine_learning.svg/320px-Machine_learning.svg.png" width="120" alt="ML"></a>
+        <a href="ML.html"><img src="m.jpg" width="120" alt="ML"></a>
         <div>Machine Learning<br><small>Build AI models and predictive systems.</small></div>
       </td>
     </tr>
     <tr>
       <td align="center">
-        <a href="DataScience.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/37/Data_Science_Icon.png/320px-Data_Science_Icon.png" width="120" alt="Data Science"></a>
+        <a href="DataScience.html"><img src="Da.jpg" width="120" alt="Data Science"></a>
         <div>Data Science<br><small>Analyze data and discover insights.</small></div>
       </td>
       <td align="center">
-        <a href="SQLDatabases.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Sql_data_base_with_logo.svg/320px-Sql_data_base_with_logo.svg.png" width="120" alt="SQL"></a>
+        <a href="SQLDatabases.html"><img src="Q.png" width="120" alt="SQL"></a>
         <div>SQL & Databases<br><small>Manage and query data efficiently.</small></div>
       </td>
       <td align="center">
@@ -100,16 +100,12 @@
     </tr>
     <tr>
       <td align="center">
-        <a href="ProblemSolving.html"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/3a/Chess_piece_-_Knight.JPG/320px-Chess_piece_-_Knight.JPG" width="120" alt="Problem Solving"></a>
+        <a href="ProblemSolving.html"><img src="P.jpg" width="120" alt="Problem Solving"></a>
         <div>Problem Solving<br><small>Sharpen logic and coding skills.</small></div>
       </td>
-      <td></td>
-      <td></td>
     </tr>
   </table>
 </section>
-
-<a href="#" style="display: block; text-align: center; margin: 20px 0;">Back to top ↑</a>
 
 <section class="testimonials">
   <h2>What Learners Say</h2>
