--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </td>
       <td>
         <a href="DSA.html">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/8d/Data_structure.svg/320px-Data_structure.svg.png" alt="Data Structures & Algorithms" width="200">
+          <img src="D.jpg" alt="Data Structures & Algorithms" width="200">
           <h3>Data Structures & Algorithms</h3>
         </a>
         <p>Build strong CS fundamentals & prepare for interviews.</p>
@@ -63,7 +63,7 @@
     <tr>
       <td>
         <a href="SQLDatabases.html">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/87/Sql_data_base_with_logo.svg/320px-Sql_data_base_with_logo.svg.png" alt="SQL & Databases" width="200">
+          <img src="Q.png" alt="SQL & Databases" width="200">
           <h3>SQL & Databases</h3>
         </a>
         <p>Query, store, and manage data effectively.</p>
@@ -88,8 +88,8 @@
 
 <section class="testimonials">
   <h2>What Our Learners Say</h2>
-  <blockquote>"This platform helped me learn Python in a month!" - Alex</blockquote>
-  <blockquote>"The free courses are as good as paid ones elsewhere!" - Priya</blockquote>
+  <p>"This platform helped me learn Python in a month!" - Harsh</p>
+  <p>"The free courses are as good as paid ones elsewhere!" - Priya</p>
 </section>
 
 <section class="subscribe">
