--- a/java.html
+++ b/java.html
@@ -15,9 +15,48 @@
 </header>
 <hr/>
 <section>
-<h2>Java Programming</h2>
-<p>Learn object-oriented programming and build scalable applications using Java, a powerful and versatile language.</p>
+  <h2 style="text-align:center;">Java Programming</h2>
+  <p >
+    Java is a powerful, object-oriented programming language known for building robust, secure applications – from Android apps to enterprise systems.
+  </p>
 </section>
+
+<section>
+  <h3 style="text-align:center;">What You’ll Learn</h3>
+  <ul>
+    <li>Core Java syntax and data types</li>
+    <li>Object-oriented programming: classes, objects, inheritance</li>
+    <li>Handling exceptions and file I/O</li>
+    <li>Basic GUI programming with Swing</li>
+    <li>Intro to collections and multithreading</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Why Learn Java?</h3>
+  <ul>
+    <li>Widely used in large-scale enterprise systems</li>
+    <li>Foundation for Android app development</li>
+    <li>Strong community and rich libraries</li>
+    <li>Valued skill in the job market</li>
+  </ul>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Real-World Uses</h3>
+  <p>
+    Banking systems, web servers, Android apps, desktop applications, and backend APIs.
+  </p>
+</section>
+
+<section>
+  <h3 style="text-align:center;">Get Started</h3>
+  <p>
+    <a href="Signup.html">Sign up</a> and start building your first Java program!
+    Already have an account? <a href="login.html">Log in</a> to continue.
+  </p>
+</section>
+
 <hr/>
 <section>
 <footer>
