--- a/Privacy.html
+++ b/Privacy.html
@@ -3,23 +3,39 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>C Programming - Udemy</title>
+<title>Privacy Policy - Udemy</title>
 </head>
 <body>
+
+
 <header>
-<span><b>Udemy</b></span>
-<input type="text" placeholder="Search About Courses">
-<button><a href="login.html">Log in</a></button>
-<button><a href="Signup.html">Register</a></button>
-<button><a href="index.html">Homepage</a></button>
+  <span><b>Udemy</b></span>
+  <input type="text" placeholder="Search About Courses">
+  <button><a href="login.html">Log in</a></button>
+  <button><a href="Signup.html">Register</a></button>
+  <button><a href="index.html">Homepage</a></button>
 </header>
 <hr/>
+
+
 <section>
-<h2>C Programming</h2>
-<p>Learn the fundamentals of C, a powerful low-level language that forms the foundation for modern programming.</p>
+  <h2 style="text-align:center;">Privacy Policy</h2>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    Your privacy is important to us. This policy explains how we collect, use, and protect your data:
+  </p>
+  <ul style="max-width:800px; margin:auto;">
+    <li>We collect basic information like your name and email to create your account and provide services.</li>
+    <li>We do not sell your personal data to third parties.</li>
+    <li>You can request to update or delete your data at any time.</li>
+    <li>We use cookies to improve user experience and understand how our site is used.</li>
+  </ul>
+  <p style="max-width:800px; margin:auto; text-align:justify;">
+    If you have questions about this policy, please contact us at <a href="mailto:privacy@udemy.com">privacy@udemy.com</a>.
+  </p>
 </section>
 <hr/>
-<section>
+
+
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -65,6 +81,8 @@
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ContactUs.html">Contact Us</a></li>
+      <li><a href="Terms.html">Terms of Use</a></li>
+      <li><a href="Privacy.html">Privacy Policy</a></li>
     </ul>
   </div>
 
@@ -73,6 +91,6 @@
     <span>English</span>
   </div>
 </footer>
-</section>
+
 </body>
 </html>
