--- a/Signup.html
+++ b/Signup.html
@@ -1,116 +1,107 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Log in to continue your learning</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sign up to start learning</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    <section>
-        <header> 
-        <span><b>Udemy</b></span>
-        <input type="text" placeholder="Search About Courses">
-        <button><a href="courses.html">Explore Courses</a></button>
-        <button><a href="login.html">Log in</a></button>
-        <button><a href="Signup.html">Register</a></button>
-        <button><a href="index.html">Homepage</a></button>
-        
-        </header>
-    </section>
-     <hr/>
 
-    <section>
-
-        <div>
-        <h2><b>Sign up with email</b></h2>
-        <input type="text" placeholder="Full name">
-        <br>
-        <input type="text" placeholder="Email">
-        <br>
-        <input type="checkbox" id="A">
-        <label for="A">Send me special offers , personalized recommendations and learning tips.</label>
-        <br>
-        <button> &#x1F4E7 Continue with Email </button>
-        </div>
-
-        <div>
-            <span>-------- Other Sign up options --------</span>
-            <br>
-            <span>
-            <button><i class="fa-brands fa-google"></i></button>
-            <button><i class="fa-brands fa-facebook"></i></button>
-            <button><i class="fa-brands fa-apple"></i></button>
-            </span>
-
-            <br>
-
-            <span>By signing up, you agree to our <a href="#">Terms of Use</a> and <a href="#"> Privacy Policy.</a></span>
-
-        </div>
-
-        <div>
-            <button>Already have an account?<a href="#">Log in</a></button>
-        </div>
-    </section>
-     <hr/>
-
- <section>
-<footer>
-  <h2>Explore Top Courses for CS Students</h2>
-
-  <div class="footer-column">
-    <h3>Web & Programming</h3>
-    <ul>
-      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
-      <li><a href="JavaScript.html">JavaScript</a></li>
-      <li><a href="java.html">Python Programming</a></li>
-      <li><a href="java.html">Java Programming</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Data & AI</h3>
-    <ul>
-      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
-      <li><a href="ML.html">Machine Learning</a></li>
-      <li><a href="DataScience.html">Data Science</a></li>
-      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Cloud & DevOps</h3>
-    <ul>
-      <li><a href="AWSBasics.html">AWS Basics</a></li>
-      <li><a href="DockerContainers.html">Docker & Containers</a></li>
-      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Other Useful Skills</h3>
-    <ul>
-      <li><a href="GitGitHub.html">Git & GitHub</a></li>
-      <li><a href="ProblemSolving.html">Problem Solving</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <h3>Company</h3>
-    <ul>
-      <li><a href="AboutUs.html">About Us</a></li>
-      <li><a href="ContactUs.html">Contact Us</a></li>
-    </ul>
-  </div>
-
-  <div class="footer-column">
-    <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
-    <span>English</span>
-  </div>
-</footer>
+<section>
+  <header>
+    <span><b>Udemy</b></span>
+    <input type="text" placeholder="Search About Courses">
+    <button><a href="courses.html">Explore Courses</a></button>
+    <button><a href="login.html">Log in</a></button>
+    <button><a href="Signup.html">Register</a></button>
+    <button><a href="index.html">Homepage</a></button>
+  </header>
 </section>
+<hr/>
 
+<main>
+  <h2><b>Sign up with email</b></h2>
+  <form action="#" method="post">
+    <input type="text" name="fullname" placeholder="Full name" required>
+    <br>
+    <input type="email" name="email" placeholder="Email" required>
+    <br>
+    <input type="checkbox" id="offers" name="offers">
+    <label for="offers">Send me special offers, personalized recommendations and learning tips.</label>
+    <br>
+    <button type="submit">&#x1F4E7 Continue with Email</button>
+  </form>
+
+  <div>
+    <span>-------- Other Sign up options --------</span>
+    <br>
+    <button type="button"><i class="fa-brands fa-google"></i></button>
+    <button type="button"><i class="fa-brands fa-facebook"></i></button>
+    <button type="button"><i class="fa-brands fa-apple"></i></button>
+  </div>
+  <br>
+  <span>By signing up, you agree to our <a href="#">Terms of Use</a> and <a href="#">Privacy Policy</a>.</span>
+  <br>
+  <span>Already have an account? <a href="#">Log in</a></span>
+</main>
+<hr/>
+
+<section>
+  <footer>
+    <h2>Explore Top Courses for CS Students</h2>
+
+    <div class="footer-column">
+      <h3>Web & Programming</h3>
+      <ul>
+        <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+        <li><a href="JavaScript.html">JavaScript</a></li>
+        <li><a href="java.html">Python Programming</a></li>
+        <li><a href="java.html">Java Programming</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Data & AI</h3>
+      <ul>
+        <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+        <li><a href="ML.html">Machine Learning</a></li>
+        <li><a href="DataScience.html">Data Science</a></li>
+        <li><a href="SQLDatabases.html">SQL & Databases</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Cloud & DevOps</h3>
+      <ul>
+        <li><a href="AWSBasics.html">AWS Basics</a></li>
+        <li><a href="DockerContainers.html">Docker & Containers</a></li>
+        <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Other Useful Skills</h3>
+      <ul>
+        <li><a href="GitGitHub.html">Git & GitHub</a></li>
+        <li><a href="ProblemSolving.html">Problem Solving</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <h3>Company</h3>
+      <ul>
+        <li><a href="AboutUs.html">About Us</a></li>
+        <li><a href="ContactUs.html">Contact Us</a></li>
+      </ul>
+    </div>
+
+    <div class="footer-column">
+      <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
+      <span>English</span>
+    </div>
+  </footer>
+</section>
 
 </body>
 </html>
