--- a/login.html
+++ b/login.html
@@ -1,47 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    <title>Log in to continue your learning</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Log in to continue your learning</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-    
-    <header> 
-    <span><b>Udemy</b></span>
-    <input type="text" placeholder="Search About Courses">
-    <button><a href="courses.html">Explore Courses</a></button>
-    <button><a href="login.html">Log in</a></button>
-    <button><a href="Signup.html">Register</a></button>
-    <button><a href="index.html">Homepage</a></button>
-  
-    </header>
-     <hr/>
 
-    <div>
-        <h2><b>Log in to continue your learning journey</b></h2>
-        <input type="text" placeholder="Email">
-        <br>
-        <button> &#x1F4E7 Continue with Email </button>
-        <p>--------Other Log in options--------</p>
+<header>
+  <span><b>Udemy</b></span>
+  <input type="text" placeholder="Search About Courses">
+  <button><a href="courses.html">Explore Courses</a></button>
+  <button><a href="login.html">Log in</a></button>
+  <button><a href="Signup.html">Register</a></button>
+  <button><a href="index.html">Homepage</a></button>
+</header>
+<hr/>
 
-        <span>
-            <button><i class="fa-brands fa-google"></i></button>
-            <button><i class="fa-brands fa-facebook"></i></button>
-            <button><i class="fa-brands fa-apple"></i></button>
-        </span>
+<main>
+  <h2><b>Log in to continue your learning journey</b></h2>
+  <form action="#" method="post">
+    <input type="email" name="email" placeholder="Email" required>
+    <br>
+    <button type="submit">&#x1F4E7 Continue with Email</button>
+  </form>
 
-        <br>
+  <p>-------- Other Log in options --------</p>
+  <div>
+    <button type="button"><i class="fa-brands fa-google"></i></button>
+    <button type="button"><i class="fa-brands fa-facebook"></i></button>
+    <button type="button"><i class="fa-brands fa-apple"></i></button>
+  </div>
+  <br>
+  <span>Don't have an account? <a href="#">Sign Up</a></span>
+  <br>
+  <span><a href="#">Log in with Your Organization</a></span>
+</main>
 
-        <span>Don't have an account? <a href="#">Sign Up</a></span>
-        <br>
-        <span><a href="#">Log with Your Organization</a></span>
-    </div>
-<section>
-     <hr/>
+<hr/>
 
-<section>
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -95,7 +93,6 @@
     <span>English</span>
   </div>
 </footer>
-</section>
 
 </body>
 </html>
