Initial commit or update

--- a/ContactUs.html
+++ b/ContactUs.html
@@ -9,11 +9,16 @@
 
 <!-- Header -->
 <header>
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
-  <button><a href="index.html">Homepage</a></button>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+      <a href="index.html">Homepage</a>
+    </nav>
+  </div>
 </header>
 <hr/>
 
@@ -52,7 +57,6 @@
 </section>
 
 <hr/>
-<section>
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
@@ -101,12 +105,10 @@
     </ul>
   </div>
 
-  <div class="footer-column">
+  <div class="footer-bottom">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
 </footer>
-</section>
-
 </body>
 </html>
