--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="header-container">
     <span class="logo"><b>Udemy</b></span>
     <nav class="nav-links">
-      <input type="text" placeholder="Search About Courses">
+      <input class="search" type="text" placeholder="Search About Courses">
       <a href="courses.html">Explore Courses</a>
       <a href="login.html">Log in</a>
       <a href="Signup.html">Register</a>
@@ -30,7 +30,7 @@
 
 <section class="hero">
   <h1>Learn Anything for Free</h1>
-  <p>Start your learning journey with high-quality, free courses</p>
+  <p>Start your learning journey with high-bality, free courses</p>
   <a class="cta-button" href="courses.html">Explore Courses</a>
 </section>
 
