--- a/AboutUs.html
+++ b/AboutUs.html
@@ -9,11 +9,16 @@
 
 <!-- Header -->
 <header>
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
-  <button><a href="index.html">Homepage</a></button>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+      <a href="index.html">Homepage</a>
+    </nav>
+  </div>
 </header>
 <hr/>
 
@@ -73,44 +78,43 @@
 
 <!-- Footer -->
 <hr/>
-<section>
 <footer>
   <h2>Explore Top Courses for CS Students</h2>
 
   <div class="footer-column">
     <h3>Web & Programming</h3>
     <ul>
-      <li><a href="#">HTML & CSS</a></li>
-      <li><a href="#">JavaScript</a></li>
-      <li><a href="#">Python Programming</a></li>
-      <li><a href="#">Java Programming</a></li>
+      <li><a href="HTMLandCSS.html">HTML & CSS</a></li>
+      <li><a href="JavaScript.html">JavaScript</a></li>
+      <li><a href="java.html">Python Programming</a></li>
+      <li><a href="java.html">Java Programming</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Data & AI</h3>
     <ul>
-      <li><a href="#">Data Structures & Algorithms</a></li>
-      <li><a href="#">Machine Learning</a></li>
-      <li><a href="#">Data Science</a></li>
-      <li><a href="#">SQL & Databases</a></li>
+      <li><a href="DSA.html">Data Structures & Algorithms</a></li>
+      <li><a href="ML.html">Machine Learning</a></li>
+      <li><a href="DataScience.html">Data Science</a></li>
+      <li><a href="SQLDatabases.html">SQL & Databases</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Cloud & DevOps</h3>
     <ul>
-      <li><a href="#">AWS Basics</a></li>
-      <li><a href="#">Docker & Containers</a></li>
-      <li><a href="#">Linux Essentials</a></li>
+      <li><a href="AWSBasics.html">AWS Basics</a></li>
+      <li><a href="DockerContainers.html">Docker & Containers</a></li>
+      <li><a href="LinuxEssentials.html">Linux Essentials</a></li>
     </ul>
   </div>
 
   <div class="footer-column">
     <h3>Other Useful Skills</h3>
     <ul>
-      <li><a href="#">Git & GitHub</a></li>
-      <li><a href="#">Problem Solving</a></li>
+      <li><a href="GitGitHub.html">Git & GitHub</a></li>
+      <li><a href="ProblemSolving.html">Problem Solving</a></li>
     </ul>
   </div>
 
@@ -122,12 +126,11 @@
     </ul>
   </div>
 
-  <div class="footer-column">
+  <div class="footer-bottom">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
 </footer>
-</section>
 
 </body>
 </html>
