--- a/Privacy.html
+++ b/Privacy.html
@@ -9,11 +9,16 @@
 
 
 <header>
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
-  <button><a href="index.html">Homepage</a></button>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+      <a href="index.html">Homepage</a>
+    </nav>
+  </div>
 </header>
 <hr/>
 
@@ -81,12 +86,10 @@
     <ul>
       <li><a href="AboutUs.html">About Us</a></li>
       <li><a href="ContactUs.html">Contact Us</a></li>
-      <li><a href="Terms.html">Terms of Use</a></li>
-      <li><a href="Privacy.html">Privacy Policy</a></li>
     </ul>
   </div>
 
-  <div class="footer-column">
+  <div class="footer-bottom">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
