--- a/Signup.html
+++ b/Signup.html
@@ -5,19 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sign up to start learning</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+   <link rel="stylesheet" href="login.css">
 </head>
 <body>
 
-<section>
-  <header>
-    <span><b>Udemy</b></span>
-    <input type="text" placeholder="Search About Courses">
-    <button><a href="courses.html">Explore Courses</a></button>
-    <button><a href="login.html">Log in</a></button>
-    <button><a href="Signup.html">Register</a></button>
-    <button><a href="index.html">Homepage</a></button>
-  </header>
-</section>
+<header>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+      <a href="index.html">Homepage</a>
+    </nav>
+  </div>
+</header>
 <hr/>
 
 <main>
@@ -87,7 +90,7 @@
         <li><a href="ProblemSolving.html">Problem Solving</a></li>
       </ul>
     </div>
-
+    
     <div class="footer-column">
       <h3>Company</h3>
       <ul>
