--- a/login.html
+++ b/login.html
@@ -4,17 +4,23 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Log in to continue your learning</title>
+   <link rel="stylesheet" href="login.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
 
+
 <header>
-  <span><b>Udemy</b></span>
-  <input type="text" placeholder="Search About Courses">
-  <button><a href="courses.html">Explore Courses</a></button>
-  <button><a href="login.html">Log in</a></button>
-  <button><a href="Signup.html">Register</a></button>
-  <button><a href="index.html">Homepage</a></button>
+  <div class="header-container">
+    <span class="logo"><b>Udemy</b></span>
+    <nav class="nav-links">
+      <input class="search" type="text" placeholder="Search About Courses">
+      <a href="courses.html">Explore Courses</a>
+      <a href="login.html">Log in</a>
+      <a href="Signup.html">Register</a>
+      <a href="index.html">Homepage</a>
+    </nav>
+  </div>
 </header>
 <hr/>
 
@@ -88,7 +94,7 @@
     </ul>
   </div>
 
-  <div class="footer-column">
+  <div class="footer-bottom">
     <span><b>Udemy</b> &copy;2025 Udemy, Inc.</span>
     <span>English</span>
   </div>
